--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'kotlinx-serialization'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -86,8 +87,11 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
     // Compose dependencies
+    def nav_version = "2.3.5"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0-beta01"
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha09"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0-alpha03"
 
@@ -101,8 +105,12 @@ dependencies {
 
     //Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.38.1"
-    kapt "com.google.dagger:hilt-android-compiler:2.37"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    implementation "androidx.hilt:hilt-navigation-fragment:1.0.0"
+    implementation "androidx.hilt:hilt-work:1.0.0"
+    kapt "com.google.dagger:dagger-android-processor:2.38.1"
+    kapt "com.google.dagger:hilt-android-compiler:2.38.1"
+    kapt "androidx.hilt:hilt-compiler:1.0.0"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
 
     // Retrofit
@@ -112,11 +120,9 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
 
     // Room
+    implementation "androidx.room:room-ktx:2.3.0"
     implementation "androidx.room:room-runtime:2.3.0"
     kapt "androidx.room:room-compiler:2.3.0"
-
-    // Kotlin Extensions and Coroutines support for Room
-    implementation "androidx.room:room-ktx:2.3.0"
 
     // Coil
     implementation "io.coil-kt:coil:1.1.1"
@@ -127,4 +133,8 @@ dependencies {
 
     // Serialization
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0'
+}
+
+kapt {
+    correctErrorTypes = true
 }
