--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.ihonboarding"
-        minSdk 22
+        minSdk 24
         targetSdk 31
         versionCode versionMajor * 10000 + versionMinor * 100 + versionPatch
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
@@ -138,6 +138,11 @@ dependencies {
 
     // Serialization
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0'
+
+    // Security
+    implementation "androidx.security:security-crypto:1.0.0"
+    implementation "androidx.security:security-identity-credential:1.0.0-alpha03" // For Identity Credential APIs
+    implementation "androidx.security:security-app-authenticator:1.0.0-alpha02"   // For App Authentication APIs
 }
 
 kapt {
