--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
 
+    // Live Data
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
+
     //Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.38.1"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
