--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,10 +112,13 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
 
     //Dagger - Hilt
+    implementation 'com.google.dagger:dagger-android:2.38.1'
+    implementation 'com.google.dagger:dagger-android-support:2.38.1'
     implementation "com.google.dagger:hilt-android:2.38.1"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     implementation "androidx.hilt:hilt-navigation-fragment:1.0.0"
     implementation "androidx.hilt:hilt-work:1.0.0"
+    kapt 'com.google.dagger:dagger-compiler:2.38.1'
     kapt "com.google.dagger:dagger-android-processor:2.38.1"
     kapt "com.google.dagger:hilt-android-compiler:2.38.1"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
