--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,6 +112,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
 
     //Dagger - Hilt
+    implementation 'com.google.dagger:dagger:2.38.1'
     implementation 'com.google.dagger:dagger-android:2.38.1'
     implementation 'com.google.dagger:dagger-android-support:2.38.1'
     implementation "com.google.dagger:hilt-android:2.38.1"
