--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation "androidx.activity:activity-ktx:1.4.0"
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -131,8 +132,7 @@ dependencies {
     kapt "androidx.room:room-compiler:2.3.0"
 
     // Coil
-    implementation "io.coil-kt:coil:1.1.1"
-    implementation "com.google.accompanist:accompanist-coil:0.7.0"
+    implementation "io.coil-kt:coil-compose:1.4.0"
 
     // Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
