--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'androidx.datastore:datastore-core:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -90,7 +91,7 @@ dependencies {
 
     // Compose dependencies
     def nav_version = "2.3.5"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0-beta01"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0"
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha09"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
@@ -141,12 +142,17 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     // Serialization
+    implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0'
 
     // Security
     implementation "androidx.security:security-crypto:1.0.0"
     implementation "androidx.security:security-identity-credential:1.0.0-alpha03" // For Identity Credential APIs
     implementation "androidx.security:security-app-authenticator:1.0.0-alpha02"   // For App Authentication APIs
+
+    // Material Design
+    def material_dialogs_version = "3.1.0"
+    implementation "com.afollestad.material-dialogs:core:$material_dialogs_version"
 }
 
 kapt {
