--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.IHOnboarding">
         <activity
-            android:name=".presentation.ui.home.HomeActivity"
+            android:name=".presentation.ui.login.LoginActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.IHOnboarding.NoActionBar">
