--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ android {
         debug {
             versionNameSuffix ".debug"
             resValue "string", "app_version", "${defaultConfig.versionName}${versionNameSuffix}"
-            buildConfigField "String", "BASE_URL", '"https://icehousecorp.com/careers/"'
+            buildConfigField "String", "BASE_URL", '"http://34.121.153.157/"'
         }
         customDebugType {
             debuggable true
@@ -82,9 +82,12 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.runtime:runtime:$compose_version"
+    implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.ui:ui-text:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation 'androidx.datastore:datastore-core:1.0.0'
@@ -153,8 +156,10 @@ dependencies {
 
     // Security
     implementation "androidx.security:security-crypto:1.0.0"
-    implementation "androidx.security:security-identity-credential:1.0.0-alpha03" // For Identity Credential APIs
-    implementation "androidx.security:security-app-authenticator:1.0.0-alpha02"   // For App Authentication APIs
+    implementation "androidx.security:security-identity-credential:1.0.0-alpha03"
+    // For Identity Credential APIs
+    implementation "androidx.security:security-app-authenticator:1.0.0-alpha02"
+    // For App Authentication APIs
 
     // Material Design
     def material_dialogs_version = "3.1.0"
