--- a/app/build.gradle
+++ b/app/build.gradle
@@ -151,19 +151,12 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     // Serialization
-    implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0'
 
     // Security
     implementation "androidx.security:security-crypto:1.0.0"
-    implementation "androidx.security:security-identity-credential:1.0.0-alpha03"
-    // For Identity Credential APIs
-    implementation "androidx.security:security-app-authenticator:1.0.0-alpha02"
-    // For App Authentication APIs
-
-    // Material Design
-    def material_dialogs_version = "3.1.0"
-    implementation "com.afollestad.material-dialogs:core:$material_dialogs_version"
+    implementation "androidx.security:security-identity-credential:1.0.0-alpha03" // For Identity Credential APIs
+    implementation "androidx.security:security-app-authenticator:1.0.0-alpha02"   // For IhOnboardingApp Authentication APIs
 }
 
 kapt {
